--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "sequelize": "^6.9.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "start": "node app.js"
