--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "sequelize": "^6.9.0"
